# $Id: Makefile.am,v 1.3 2003/06/20 20:15:30 beren12 Exp $

SUBDIRS = src data

#EXTRA_DIST=gift_fasttrack.lsm.in gift_fasttrack.spec.in gift_fasttrack.texinfo

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
#info_TEXINFOS = gift_fasttrack.texinfo
#gift_fasttrack_TEXINFOS = gpl.texinfo

#  install the man pages
man_MANS=gift_fasttrack.1
